src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginScroll.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

	<ScrollViewer
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="450"
  Width="450"
  Margin="-99">

		<Button Content="Button"/>

	</ScrollViewer>

</Grid>
